# block_o_automata

./: CMakeLists.txt  README.md  admin.cpp  block o automata.md  board.cpp  board.h  cell_tools.cpp  cell_tools.h  level_edit.cpp  level_edit.h  level_editor.cpp  level_info.cpp  level_info.h  level_pick.cpp  level_pick.h  level_picker.cpp  main.cpp  win_console_ui.cpp  win_console_ui.h
cells_dir/: EmptyCell.cpp  EmptyCell.h  barrier_cell.cpp  barrier_cell.h  cell.cpp  cell.h  cell_tools.cpp  cell_tools.h  empty_cell.cpp  empty_cell.h  goal_cell.cpp  goal_cell.h  kill_cell.cpp  kill_cell.h  move_cell.cpp  move_cell.h  spawn_cell.cpp  spawn_cell.h  turn_cell.cpp  turn_cell.h
executables/: admin.cpp  level_editor.cpp  level_picker.cpp  level_player.cpp  main.cpp  win_console_ui.cpp
level_dir/: level_edit.cpp  level_edit.h  level_info.cpp  level_info.h  level_pick.cpp  level_pick.h  level_play.cpp  level_play.h
levels/: cs.cpp  levelsdemo1.txt
windows_console/: edit.cpp  edit.h  pick.cpp  pick.h  play.cpp  play.h  scml.cpp  scml.h
windows_console_tools/: coord.cpp  coord.h  icon.cpp  icon.h  win_colors.cpp  win_colors.h
